--- a/popup.html
+++ b/popup.html
@@ -1,67 +1,82 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PhishGuard Popup</title>
+    <title>Email Scanner</title>
     <style>
         body {
-            display: flex;
-            width: 500px;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background: linear-gradient(135deg, #2b5876, #4e4376);
-            font-family: 'Brush Script MT';
-            color: #ffffff;
-            margin: 0;
-        } 
-        
-
-        .container {
-            background: transparent;
-            padding: 20px;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
-            backdrop-filter: blur(10px);
+            font-family: Arial, sans-serif;
+            padding: 10px;
+            width: 300px;
+            height: 200px;
             text-align: center;
+            background-color: #4f5050;
+            padding-bottom: 10px;
         }
-
-        .container button {
+        #logo {
+            margin-bottom: 10px;
+            height: 50px;
+        }
+        #scan-emails {
+            display: inline-block;
+            background-color: #007BFF;
+            color: white;
+            border: none;
             padding: 10px 20px;
+            font-weight: bold;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        #scan-emails:hover {
+            background-color: #0056b3;
+        }
+        #scan-result {
+            margin-top: 10px;
+            color: white;
+        }
+        .email {
+            border-bottom: 1px solid #ddd;
+            padding: 5px 0;
+        }
+        .email:last-child {
+            border-bottom: none;
+        }
+        .email-snippet {
+            color: #666;
+            font-size: 0.9em;
+        }
+        button {
+            display: block;
+            width: 100%;
+            margin-top: 5px;
+            padding: 10px;
             border: none;
             border-radius: 5px;
-            background: #4e4376;
-            color: #ffffff;
-            font-size: 16px;
             cursor: pointer;
-            transition: background 0.3s ease;
         }
-
-        .container button:hover {
-            background: #2b5876;
+        button:hover {
+            opacity: 0.8;
         }
-
-        iframe {
-            width: 100%;
-            height: 400px;
-            border: none;
-            display: none;
+        #open-gmail {
+            background-color: #28a745;
+            color: white;
         }
-
-        #status {
-            margin-top: 20px;
-            font-size: 16px;
+        #view-more {
+            background-color: #17a2b8;
+            color: white;
+        }
+        #ignore {
+            background-color: #6c757d;
+            color: white;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>PhishGuard</h1>
-        <button id="authButton">Authenticate</button>
-        <iframe id="authFrame" src="user_auth.html"></iframe>
-        <div id="status"></div>
+    <div id="logo">
+        <img src="./icon/icon64.png" alt="Logo" height="50">
     </div>
-
+    <h1>Phishguard Scanner</h1>
+    <button id="scan-emails">SCAN MANUALLY</button>
+    <div id="scan-result"></div>
     <script src="popup.js"></script>
 </body>
 </html>
